--- a/apiserver/templates/apiserver/main_page.html
+++ b/apiserver/templates/apiserver/main_page.html
@@ -42,7 +42,7 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Download</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -207,7 +207,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Download</li>
   </ul>
 </div>
 
